fix: 🐛 maintenance layout on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
-// Maintenance mode
+@import './styles/responsive.scss';
 
+// Maintenance mode
 @keyframes MaintenanceGradient {
   0% {
     background-position: 0% 50%;
@@ -15,33 +16,44 @@
 .state-a-app--maintenance {
 	overflow: hidden;
 	text-align: center;
-	position: absolute;
+	position: relative;
 	width: 100wh;
   height: 100vh;
   color: #fff;
   background: linear-gradient(-45deg, #f6cea1, #d8687b, #0e3536, #6e8f42);
   background-size: 1000% 400%;
   animation: MaintenanceGradient 15s ease infinite;
-  position: relative;
+	position: relative;
+
+	.a-app__maintenance {
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+	}
+
+	h1 {
+		font-size: 2rem;
+
+		@include respond-to-min("sm") {
+			font-size: 2.7rem;
+		}
+	}
 
 	img {
 		display: block;
-		max-width: 50%;
+		max-width: 80%;
 		margin: 0 auto;
 		max-height: 500px;
-	}
 
-	@media all and (max-width: 500px) {
-		img {
-			max-width: 100%;
-		}
-
-		main {
-			width: 80%;
+		@include respond-to-min("sm") {
+			max-width: 50%;
 		}
 	}
 
 	.a-app__maintenance-body {
+		padding: 10px;
+
 		a {
 			color: #fff;
 			text-decoration: none;
